[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_data"
version = "0.0.1"
description = "A more flexible graph data structure"
readme = "README.md"
keywords = ["python"]
dynamic = ["dependencies", "optional-dependencies"]

[tool.ruff]
preview = true
